# agents4science.github.io

./: .gitignore  README.md  _config.yml  curriculum.md
.claude/: settings.local.json
Academy/: README.md
Applications/: README.md  create_overview_figures.py
Applications/PolynomialDiscovery/: README.md  compare_agent_counts.py  compare_communication.py  compare_problems.py  create_overview_figure.py  independent_scientists_academy.py  requirements.txt
Applications/RuleDiscovery/: README.md  analyze_experiments.py  comm_strategy_easy_results.json  comm_strategy_hard_results.json  comm_strategy_results.json  compare_comm_easy.py  compare_comm_hard.py  compare_comm_strategies.py  compare_models.py  create_overview_figure.py  diagnose_hard.py  hidden_rule_discovery.py  inference_auth_token.py  llm_fallback.py  (+12 more)
Capabilities/: .NOTES.swp  NOTES  README.md  autonomous-systems.md  coordinate-agents.md  federated-agents.md  governed-tool-use.md  hpc-tools.md  human-in-loop.md  instrument-integration.md  local-agents.md  multi-agent-coordination.md  parallel-inference.md  scale-inference.md  scale-tool-use.md  simulation-steering.md
Class/: README.md  curriculum.md
DOE_Agent_Requirements/: README.md  index.md
Frameworks/: README.md
ResourceRights/: README.md
ResourceRights/prototype/: README.md  delegations.json  pyproject.toml
ResourceRights/prototype/src/delegation_service/: __init__.py  config.py  database.py  main.py  simple_app.py
ResourceRights/prototype/src/delegation_service/adapters/: __init__.py  base.py  storage.py
ResourceRights/prototype/src/delegation_service/api/: __init__.py  auth.py  delegations.py
ResourceRights/prototype/src/delegation_service/models/: __init__.py  database.py  schemas.py
ResourceRights/prototype/src/delegation_service/storage/: __init__.py  file_store.py
ResourceRights/prototype/tests/: test_api.py
Software/: README.md
Software/CharacterizeChemicals/: README.md  chem_agent.py  chem_agent_llm.py  local_planner.py  pyproject.toml  run_chem_agent.py  run_chem_agent_phi.py
Software/CharacterizeChemicals/characterize_chemicals/: chem_agent.py  cli.py  local_planner.py
_includes/: footer.html  header.html
_layouts/: default.html
(+167 files in other folders)
